[gd_scene load_steps=6 format=2]

[ext_resource path="res://UIScenes/MainUI.gd" type="Script" id=1]
[ext_resource path="res://UIScenes/Images/message_icon.png" type="Texture" id=2]
[ext_resource path="res://UIScenes/Images/message_window.png" type="Texture" id=3]
[ext_resource path="res://UIScenes/Button.gd" type="Script" id=4]
[ext_resource path="res://UIScenes/Images/скорости-ползунок-1.png" type="Texture" id=5]

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 386.0
margin_top = 486.0
margin_right = 604.0
margin_bottom = 538.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedScroll" type="HSlider" parent="."]
margin_left = 389.0
margin_top = 504.0
margin_right = 599.0
margin_bottom = 520.0
min_value = -10.0
max_value = 40.0
step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.7481
margin_top = 1.95071
margin_right = -29.7481
margin_bottom = 1.95068
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="NinePatchRect" parent="Messages"]
margin_left = 66.4128
margin_top = 48.8532
margin_right = 122.413
margin_bottom = 88.8532
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Button" parent="Messages/icon"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Control" parent="Messages"]
margin_left = 204.0
margin_top = 72.0
margin_right = 888.0
margin_bottom = 481.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window_Texture" type="NinePatchRect" parent="Messages/Window"]
margin_right = 669.0
margin_bottom = 398.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn" type="Button" parent="Messages/Window"]
margin_left = 14.0
margin_top = 99.0
margin_right = 623.0
margin_bottom = 119.0
text = "spawn"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Messages/icon/icon" to="." method="_on_icon_pressed"]
[connection signal="pressed" from="Messages/Window/spawn" to="." method="_on_spawn_pressed"]
